--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <meta http-equiv='refresh' content='0; URL=http://example.com/'>
+  <meta http-equiv='refresh' content='0; URL=https://murmuring-mesa-26642.herokuapp.com/'>
 </head>
 
 </html>
