--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-
-<head>
-  <meta http-equiv='refresh' content='0; URL=https://murmuring-mesa-26642.herokuapp.com/'>
-</head>
-
+  <body style="margin:0;padding:0">
+    <iframe src="https://murmuring-mesa-26642.herokuapp.com" height="100%" width="100%" frameborder="0">
+    </iframe>
+  </body>
 </html>
+
